Refactor SherlockInstallation and Add System methods to SherlockInstalltion
- Moved methods with same implemenation of AndroidStudioInstallation and
  SherlockInstallation to IdeInstallation, to optimize code reusability.
- Introduced new  methods to SherlockInstalltion for developing tests
  for Sherlock platform similar to Android Studio tests that uses
  AndroidSystem(eg. ag/35415212).

Bug: 442951864
Test: n/a
Change-Id: I0d6fc8d3a430963d764afb293942f6430b4efc23

GitOrigin-RevId: bf9a38f5947887c0135c078a10ea96c52dcf8f01
(cherry picked from commit 9dd438fddb411a5465d61b24d6634a13c3862c35)

Space-RevId: 0a50481c0933794fce515b35ef286d25edd3c74c